# windows-setup

./: .gitignore  .gitmodules  LICENSE  README.md  deploy.ps1  init.ps1  personal.ps1  personal_deploy.ps1  personal_init.ps1  scoop.ps1  sw_deploy.ps1
config/: .gitconfig  .wslconfig  Microsoft.PowerShell_profile.ps1  claude_desktop_config.json  emacs-like.synapse3  emacs-like.synapse4  get_ipv4.bash  profile.ps1  settings.json  wsl2_port.ps1  wsl_port.ps1  wsl_port_forwarding.ps1
config/keychron/: Keymap-Q6 Max JIS Knob-7-23-49.json  Q6 Max JIS Knob Macro.json  add_matrix.py  info.json  info_pre.json  kle.json  layout_q6_max_4layers.json  layout_q6_max_6layers.json  win_4_layers.json
envs/clion/: clion.dockerfile  clion.yml  gdbinit.sh
installer/: 3rd_party.ps1  7zip_double_click.ps1  box.ps1  box_install.ps1  boxstarter.ps1  choco.config  close_ports.ps1  open_ports.ps1  ps_sshd.ps1  py38pip.txt  py38pip.yml  remote.ps1  requirements.txt  sshd_win.ps1  user.ps1  winget.json  wsl2_scheduler.ps1
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
python/: condaenv.w_g22v6c.requirements.txt  environments.yml  requirements.txt
scripts/installer/: cuda.ps1  develop.ps1  everything.ps1  font.ps1  keyhac.ps1  keypirinha.ps1  quicklook.ps1  scoop.ps1  vscode.ps1  winget.ps1
scripts/network/: netsh.ps1  open_ports.ps1  sshd.ps1  wsl2_scheduler.ps1
scripts/regkey/: 7zip.ps1  (+1 more)
tools/NewPlus/cpp/: CMakeLists.txt
tools/NewPlus/cpp/src/: README.md
tools/NewPlus/python/: .clinerules  .clinerules_ja  .gitignore  .mise.toml  README.md  pyproject.toml
tools/NewPlus/python/docs/: build.ps1  build.sh
tools/NewPlus/python/docs/adr/: template.md
tools/NewPlus/python/docs/source/: .gitignore  conf.py  index.rst
tools/NewPlus/python/docs/sphinx/: conf.py
tools/NewPlus/python/src/mylib/: __main__.py
(+52 files in other folders)
